@@ -1,16 +1,17 @@
 /*
  * Filter generator, Cisco IOS driver
  *
- * $Id: fg-cisco.c,v 1.2 2001/10/03 19:32:57 matthew Exp $
+ * $Id: fg-cisco.c,v 1.3 2001/10/04 14:02:43 matthew Exp $
  */
 
 #include <stdio.h>
 #include <stdlib.h>
+#include <string.h>
 
 #include "filter.h"
 #include "util.h"
 
-char *appip(char *r, const char *h)
+static char *appip(char *r, const char *h)
 {
 	if(!h) return APPS(r, "any");
 
@@ -18,15 +19,26 @@ char *appip(char *r, const char *h)
 	return APPS2(r, "host ", h);
 }
 
-char *appport(char *r, const char *p, int neg)
+static char *appport(char *r, const char *p, int neg)
 {
+	char *f;
+
 	if(!p) return APPS(r, "any");
 
-	/* XXX - split range */
-	return APPS2(r, neg ? "ne " : "eq ", p);
+	if(!(f = strchr(p, ':')))
+		return APPS2(r, neg ? "ne " : "eq ", p);
+
+	/* XXX - const? hardly :-) */
+	*f = 0;
+
+	if(neg) abort();
+	APPS(r, "range");
+	APPSS2(r, p, f+1);
+	*f = ':';
+	return r;
 }
 
-int cb_cisco(const struct filterent *ent, void *misc)
+static int cb_cisco(const struct filterent *ent, void *misc)
 {
 	char *rule = NULL, *rule_r = NULL;
 	int needret = 0, needports = 1;
@@ -95,6 +107,8 @@ int cb_cisco(const struct filterent *ent, void *misc)
 
 int fg_cisco(struct filter *filter)
 {
+	printf("# Warning: This backend is not complete and "
+		"can generate broken rulesets.\n");
 	filter_unroll(&filter);
 	return filtergen_cprod(filter, cb_cisco, NULL);
 }
