@@ -1,0 +1,7 @@
+# test port ranges
+# $Id: tport.filter,v 1.1 2001/10/04 14:02:43 matthew Exp $
+
+input eth0 {
+	proto tcp source foo dest bar dport 40000:40050 accept;
+	reject;
+};
